--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         let questionIndex = 0;
         let counter = 30;
         let user_count = 0;
-        let ws = new WebSocket(location.origin.replace(/^http/, 'wss'))
+        let ws = new WebSocket(location.origin.replace(/^http/, 'ws'))
         //let ws = new WebSocket("ws://localhost:9090")
         const btnCreate = document.getElementById("btnCreate");
         const btnStart = document.getElementById("btnStart");
