--- a/public/join.html
+++ b/public/join.html
@@ -51,7 +51,7 @@
         let username = null;
         let clientId = null;
         let score = 0;
-        let ws = new WebSocket("wss://guessgame-33328.web.app")
+        let ws = new WebSocket(window.location.href.replace("http", "ws"))
         //let ws = new WebSocket("ws://localhost:9090")
         const btnJoin = document.getElementById("btnJoin");
         const btnSubmit = document.getElementById("btnSubmit");
