--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,8 @@
         let questionIndex = 0;
         let counter = 30;
         let user_count = 0;
-        console.log(location.origin.replace(/^http/, 'wss'));
-        let ws = new WebSocket(location.origin.replace(/^http/, 'wss'));
+        console.log(location.origin.replace(/^http/, 'ws'));
+        let ws = new WebSocket(location.origin.replace(/^http/, 'ws'));
         //let ws = new WebSocket("ws://localhost:9090")
         const btnCreate = document.getElementById("btnCreate");
         const btnStart = document.getElementById("btnStart");
